fix: exclude migrations dir from air config

--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "bin"
   bin = "./bin/main"
   cmd = "go build -o ./bin/main ./cmd/api/main.go"
   delay = 1000
-  exclude_dir = ["assets", "bin", "tmp", "vendor", "testdata", "scripts", "docs"]
+  exclude_dir = ["assets", "bin", "tmp", "vendor", "testdata", "scripts", "docs", "migrations"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
